# gr-lora_sdr

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  README_EMBEDDED.md  SETUP.md  TESTING.md  analyze_bench.py  bench_demod_copy.out  bench_demod_copy_emb.out  bench_demod_copy_r4.out  bench_demod_copy_rec.out  bench_emb.csv  bench_emb_fixed.csv  bench_emb_r2.out  bench_emb_r2rec.out  bench_emb_r4.out  bench_fixed_o3.csv  bench_graymap.out  bench_header.out  bench_off.csv  bench_off_fixed.csv  bench_off_fixed_o3.csv  bench_on.csv  bench_on_fixed.csv  bench_on_fixed_o3.csv  bench_r2.out  bench_r2b.out  bench_r2rec.out  bench_r4.out  bench_r4b.out  bench_whiten_lut8.out  bench_whiten_seq.out  data  func.txt  gen_wh  mem_report  mem_report.out  toolchain-arm-none-eabi.cmake  (+1 more)
.github/workflows/: arm-power.yml  ci.yml  embedded-bench.yml  profile.yml
apps/simulation/flowgraph/: tx_rx_simulation.py
asan/: lsan.supp
bench/: targets.embedded.json  targets.fixed.embedded.json  targets.json
blocks/lora_add_crc/: README.md  test_lora_add_crc_block.c
blocks/lora_whitening/: README.md  bench_lora_whitening.c  test_lora_whitening_block.c
blocks/signal_utils/: README.md  bench_signal_utils.c  test_signal_utils_block.c
cmake/: FindLiquid.cmake  LiquidFallback.cmake  asan_profile.cmake  embedded_profile.cmake  ubsan_profile.cmake
doc/: EMBEDDED_NOTES.md  EXPERIMENTS.md  EXPERIMENTS.md:Zone.Identifier  README.md
docs/: reception_chain.md
examples/: standalone_rx_chain_demo.cc  tx_rx_hier_file_source_check.py  tx_rx_simulation.grc  txrx_check_fixed.grc
include/: lora_fft.h  lora_fft_q15.h
include/gnuradio/lora_sdr/: api.h  header.h  header_decoder.h
legacy_gr_lora_sdr/: README.md  tx_rx_simulation.py
legacy_gr_lora_sdr/examples/: tx_rx_simulation.grc  tx_rx_simulation.py
lib/: RH_RF95_header_impl.cc  RH_RF95_header_impl.h  _kiss_fft_guts.h  add_crc_impl.cc  add_crc_impl.h  crc_verif_impl.cc  crc_verif_impl.h  data_source_impl.cc  data_source_impl.h  deinterleaver_impl.cc  deinterleaver_impl.h  dewhitening_impl.cc  dewhitening_impl.h  fft_demod_impl.cc  fft_demod_impl.h  frame_sync_impl.cc  frame_sync_impl.h  gray_demap_impl.cc  gray_demap_impl.h  gray_mapping_impl.cc  gray_mapping_impl.h  hamming_dec_impl.cc  hamming_dec_impl.h  hamming_enc_impl.cc  hamming_enc_impl.h  header_decoder_impl.cc  header_decoder_impl.h  header_impl.cc  header_impl.h  interleaver_impl.cc  interleaver_impl.h  kiss_fft.c  kiss_fft.h  modulate_impl.cc  modulate_impl.h  payload_id_inc_impl.cc  payload_id_inc_impl.h  standalone_rx_chain.cc  tables.h  whitening_impl.cc  (+1 more)
new_framework/: CMakeLists.txt
new_framework/doc/: README.md
new_framework/src/: CMakeLists.txt  lora_add_crc.c  lora_chain.h  lora_fft_demod.c  lora_fft_demod.h  lora_frame_sync.c  lora_header.c  lora_mod.c  lora_rx_chain.c  lora_tx_chain.c  lora_whitening.c  process_test_output.py  signal_utils.c  signal_utils.h
new_framework/tests/: CMakeLists.txt  test_lora_mod_fft.c  test_signal_utils.c  test_tx_rx_compare.c
results/: arm_qemu.csv  ber_snr.csv  host.csv
scripts/: analyze_bench.py  bench_chain_matrix.sh  bench_compare.py  bench_demod_matrix.sh  bench_fft_matrix.sh  bench_guard.py  bench_matrix.sh  compare_chain_csv.py  compare_demod_csv.py  compare_fft_csv.py  decode_offline_recording.py  export_tx_reference_vector.py  full_test_matrix.sh  gen_interleave_perm.py  profile_host.sh  run_chain_bench_local.sh  run_chain_bench_remote.sh  run_fft_bench_arm.sh  run_fft_bench_remote.sh  run_fft_q15_remote.sh  run_qemu_aarch64.sh  sweep_bench.sh
scripts/energy/: energy_compare.py  power_reduce.py  run_power_matrix.sh  sample_energy.py
src/: CMakeLists.txt  hello_world.c  inspect_symbols.py  lora_add_crc.c  lora_add_crc.h  lora_chain.h  lora_chain_runner.c  lora_config.h  lora_crc_table.h  lora_data_source.c  lora_data_source.h  lora_fft.c  lora_fft_demod.c  lora_fft_demod.h  lora_fft_demod_ctx.c  lora_fft_demod_ctx.h  lora_fft_q15.c  lora_fixed.h  lora_frame_sync.c  lora_frame_sync.h  lora_gray_lut.h  lora_graymap.c  lora_graymap.h  lora_hamming.c  lora_hamming.h  lora_header.h  lora_interleaver.c  lora_interleaver.h  lora_interleaver_tables.h  lora_io.c  lora_io.h  lora_log.h  lora_mod.c  lora_mod.h  lora_payload_id.c  lora_payload_id.h  lora_rx_chain.c  lora_tx_chain.c  lora_utils.c  lora_utils.h  (+8 more)
tests/: CMakeLists.txt  compare_fixed_float.sh  embedded_loopback.c  pps_guard.py  test_analyze_bench.py  test_ber_snr.c  test_end_to_end_file.c  test_fft_demod_correctness.c  test_fft_roundtrip.c  test_fixed_float_equiv.c  test_full_chain_compare.c  test_gray_golden.c  test_interleaver_golden.c  test_lora_add_crc.c  test_lora_chain.c  test_lora_chain_edge_cases.c  test_lora_data_source.c  test_lora_frame_sync.c  test_lora_graymap.c  test_lora_hamming.c  test_lora_header.c  test_lora_interleaver.c  test_lora_io.c  test_lora_mod_fft.c  test_lora_payload_id.c  test_lora_whitening.c  test_os_factor_check.c  test_signal_utils.c  test_sync_end_to_end.c  test_tx_rx_compare.c  test_whitening_golden.c
tests/benchmarks/: bench_crc.c  bench_demod.c  bench_demod_cfo.c  bench_demod_copy.c  bench_fft.c  bench_fft_q15.c  bench_frame_sync.c  bench_frame_sync_presets.c  bench_frame_sync_quality.c  bench_full_frame.c  bench_graymap.c  bench_header.c  bench_interleaver.c  bench_lora_chain.c  bench_lora_interleaver.c  bench_mod.c  bench_payload_id.c  bench_q15_to_cf.c  bench_rx_bytes_pipeline.c  bench_sfd.c  bench_tx_bytes_pipeline.c  bench_whitening.c  bench_whitening_emb_variants.c
tests/data/: base.csv  comp.csv
tests/liquid/: liquid.h
tools/: gen_whiten_lut8.c  mem_report.c
